Fix align and wrap of header and hero section

--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,11 @@ body {
 /************---HEADER SECTION---************/
 .header {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     background-color: #1F2937;
-    padding: 20px;
+    padding: 20px 80px;
+    flex-wrap: wrap;
 
 }
 
@@ -37,6 +38,8 @@ li{
     display: flex;
     min-width: 400px;
     gap: 20px;
+    padding: 0px;
+    flex-wrap: wrap;
 }
 
 /************---HERO SECTION---************/
@@ -44,10 +47,10 @@ li{
     display: flex;
     flex-direction: row;
     background-color: #1F2937;
-    padding: 50px;
+    padding: 80px;
     justify-content: space-evenly;
     align-items:stretch;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
